Fixed alignment

--- a/37signalspage/CSS/main.css
+++ b/37signalspage/CSS/main.css
@@ -10,8 +10,7 @@ nav {
 	width: 100%;
 	margin-right: 0px;
 	margin-top: 0px;
-	margin-bottom: 10px;
-}
+	}
 
 nav ul {
 	margin-top: 0px;
@@ -27,7 +26,6 @@ nav li {
 	padding-right: 10px;
 	margin-right: 0px;
 	margin-top: 0px;
-	margin-bottom: 10px;
 }
 
 body {
@@ -35,7 +33,12 @@ body {
 	margin: 30px auto;
 }
 
-
+hr {
+	src:'Images/divider.png';
+	clear: both;
+	height: 12px;
+	border: 0;
+}
 
 .introsection {
 	margin: 0 auto;
@@ -158,7 +161,7 @@ body section {
 	display: inline;
 	text-align: left;
 	width: 10%;
-	margin-right: 60px;
+	margin-right: 0px;
 }
 
 body h2 {
@@ -195,7 +198,11 @@ body h2 {
 	text-align: right;
 	display: inline-block;
 	width: 15%;
-	margin-left: 100px;
+	margin-left: 40px;
+}
+
+#logos {
+	margin-top: 20px;
 }
 
 .valuesection {
